manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: drixit-app
  labels:
    app: drixit-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-drixit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drixit-web
                port:
                  number: 80
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: drixit-api
                port:
                  number: 3000                  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drixit-web
  labels:
    app: drixit-web
  namespace: drixit-app  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: drixit-web
  template:
    metadata:
      labels:
        app: drixit-web
    spec:
      containers:
      - name: drixit-web
        image: drixit/challenge-web:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drixit-api
  labels:
    app: drixit-api
  namespace: drixit-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: drixit-api
  template:
    metadata:
      labels:
        app: drixit-api
    spec:
      containers:
      - name: drixit-api
        image: drixit/challenge-api:latest
        ports:
        - containerPort: 3000
